--- a/Areas.Rmd
+++ b/Areas.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-#Área círculo
+# Área círculo
 
 
 
@@ -17,4 +17,9 @@ knitr::opts_chunk$set(echo = TRUE)
 r = 0.5
 Area = pi * r^2
 ```
+# Área cuadrado
 
+```{r}
+Lado = 3
+AreaCuadrado = Lado^2
+```
